--- a/Practice/Practice/Practice_log.html
+++ b/Practice/Practice/Practice_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>Practice Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/6/23 10:54:43</p>
+<p class="info">2014/6/23 11:06:15</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\Siv3D\Practice\Practice\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -217,7 +217,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">Font[2] を作成しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
 <p class="debug">Texture[2] を作成しました。</p>
-<p class="info">System::Update() : ExitEvent CloseButton</p>
+<p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
@@ -256,7 +256,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/6/23 10:54:48</p>
+<p class="info">2014/6/23 11:06:40</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
