--- a/DonkeyKong/DonkeyKong/DonkeyKong_log.html
+++ b/DonkeyKong/DonkeyKong/DonkeyKong_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>DonkeyKong Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/7/7 16:57:40</p>
+<p class="info">2014/7/14 13:41:04</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -213,6 +213,8 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をオープンしました。サイズ: 123B, エンコーディング: ANSI</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をクローズしました。</p>
 <p class="debug">スプラッシュウィンドウの表示を終了します。</p>
 <p class="debug">Font[2] を作成しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
@@ -238,11 +240,11 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">レンダラーマネージャーを終了しました。</p>
 <p class="debug">Mesh[0(null)] を破棄しました。</p>
 <p class="debug">メッシュマネージャーを終了しました。</p>
-<p class="debug">Texture[2] を破棄しました。</p>
 <p class="debug">Font[2] を破棄しました。</p>
 <p class="debug">Font[0(null)] を破棄しました。</p>
 <p class="debug">フォントマネージャーを終了しました。</p>
 <p class="debug">スプライトマネージャーを終了しました。</p>
+<p class="debug">Texture[2] を破棄しました。</p>
 <p class="debug">Texture[1] を破棄しました。</p>
 <p class="debug">Texture[0(null)] を破棄しました。</p>
 <p class="debug">テクスチャマネージャーを終了しました。</p>
@@ -256,7 +258,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/7/7 16:57:56</p>
+<p class="info">2014/7/14 13:41:08</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
