--- a/DonkeyKong/DonkeyKong/DonkeyKong_log.html
+++ b/DonkeyKong/DonkeyKong/DonkeyKong_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>DonkeyKong Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/7/14 13:41:04</p>
+<p class="info">2014/7/14 19:47:12</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -213,10 +213,37 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
-<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をオープンしました。サイズ: 123B, エンコーディング: ANSI</p>
-<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をクローズしました。</p>
-<p class="debug">スプラッシュウィンドウの表示を終了します。</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.txt&quot; をオープンしました。サイズ: 1.23KiB, エンコーディング: ANSI</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.txt&quot; をクローズしました。</p>
 <p class="debug">Font[2] を作成しました。</p>
+<p class="debug">CSV: (26,0) に要素は存在しません。</p>
+<p class="debug">CSV: (26,1) に要素は存在しません。</p>
+<p class="debug">CSV: (26,2) に要素は存在しません。</p>
+<p class="debug">CSV: (26,3) に要素は存在しません。</p>
+<p class="debug">CSV: (26,4) に要素は存在しません。</p>
+<p class="debug">CSV: (26,5) に要素は存在しません。</p>
+<p class="debug">CSV: (26,6) に要素は存在しません。</p>
+<p class="debug">CSV: (26,7) に要素は存在しません。</p>
+<p class="debug">CSV: (26,8) に要素は存在しません。</p>
+<p class="debug">CSV: (26,9) に要素は存在しません。</p>
+<p class="debug">CSV: (26,10) に要素は存在しません。</p>
+<p class="debug">CSV: (26,11) に要素は存在しません。</p>
+<p class="debug">CSV: (26,12) に要素は存在しません。</p>
+<p class="debug">CSV: (26,13) に要素は存在しません。</p>
+<p class="debug">CSV: (26,14) に要素は存在しません。</p>
+<p class="debug">CSV: (26,15) に要素は存在しません。</p>
+<p class="debug">CSV: (26,16) に要素は存在しません。</p>
+<p class="debug">CSV: (26,17) に要素は存在しません。</p>
+<p class="debug">CSV: (26,18) に要素は存在しません。</p>
+<p class="debug">CSV: (26,19) に要素は存在しません。</p>
+<p class="debug">CSV: (26,20) に要素は存在しません。</p>
+<p class="debug">CSV: (26,21) に要素は存在しません。</p>
+<p class="debug">CSV: (26,22) に要素は存在しません。</p>
+<p class="debug">CSV: (26,23) に要素は存在しません。</p>
+<p class="debug">Font[2] を破棄しました。</p>
+<p class="debug">スプラッシュウィンドウの表示を終了します。</p>
+<p class="debug">解像度を 560x640 に変更しました。</p>
+<p class="debug">Font[3] を作成しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
 <p class="debug">Texture[2] を作成しました。</p>
 <p class="info">System::Update() : ExitEvent CloseButton</p>
@@ -240,7 +267,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">レンダラーマネージャーを終了しました。</p>
 <p class="debug">Mesh[0(null)] を破棄しました。</p>
 <p class="debug">メッシュマネージャーを終了しました。</p>
-<p class="debug">Font[2] を破棄しました。</p>
+<p class="debug">Font[3] を破棄しました。</p>
 <p class="debug">Font[0(null)] を破棄しました。</p>
 <p class="debug">フォントマネージャーを終了しました。</p>
 <p class="debug">スプライトマネージャーを終了しました。</p>
@@ -258,7 +285,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/7/14 13:41:08</p>
+<p class="info">2014/7/14 19:47:18</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
