--- a/DonkeyKong/DonkeyKong/DonkeyKong_log.html
+++ b/DonkeyKong/DonkeyKong/DonkeyKong_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>DonkeyKong Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/7/14 19:47:12</p>
+<p class="info">2014/7/17 15:23:10</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -213,36 +213,102 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
-<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.txt&quot; をオープンしました。サイズ: 1.23KiB, エンコーディング: ANSI</p>
-<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.txt&quot; をクローズしました。</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をオープンしました。サイズ: 588B, エンコーディング: ANSI</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をクローズしました。</p>
 <p class="debug">Font[2] を作成しました。</p>
-<p class="debug">CSV: (26,0) に要素は存在しません。</p>
-<p class="debug">CSV: (26,1) に要素は存在しません。</p>
-<p class="debug">CSV: (26,2) に要素は存在しません。</p>
-<p class="debug">CSV: (26,3) に要素は存在しません。</p>
-<p class="debug">CSV: (26,4) に要素は存在しません。</p>
-<p class="debug">CSV: (26,5) に要素は存在しません。</p>
-<p class="debug">CSV: (26,6) に要素は存在しません。</p>
-<p class="debug">CSV: (26,7) に要素は存在しません。</p>
-<p class="debug">CSV: (26,8) に要素は存在しません。</p>
-<p class="debug">CSV: (26,9) に要素は存在しません。</p>
-<p class="debug">CSV: (26,10) に要素は存在しません。</p>
-<p class="debug">CSV: (26,11) に要素は存在しません。</p>
-<p class="debug">CSV: (26,12) に要素は存在しません。</p>
-<p class="debug">CSV: (26,13) に要素は存在しません。</p>
-<p class="debug">CSV: (26,14) に要素は存在しません。</p>
-<p class="debug">CSV: (26,15) に要素は存在しません。</p>
-<p class="debug">CSV: (26,16) に要素は存在しません。</p>
-<p class="debug">CSV: (26,17) に要素は存在しません。</p>
-<p class="debug">CSV: (26,18) に要素は存在しません。</p>
-<p class="debug">CSV: (26,19) に要素は存在しません。</p>
-<p class="debug">CSV: (26,20) に要素は存在しません。</p>
-<p class="debug">CSV: (26,21) に要素は存在しません。</p>
-<p class="debug">CSV: (26,22) に要素は存在しません。</p>
-<p class="debug">CSV: (26,23) に要素は存在しません。</p>
+<p class="debug">CSV: (2,0) に要素は存在しません。</p>
+<p class="debug">CSV: (2,1) に要素は存在しません。</p>
+<p class="debug">CSV: (2,2) に要素は存在しません。</p>
+<p class="debug">CSV: (2,3) に要素は存在しません。</p>
+<p class="debug">CSV: (2,4) に要素は存在しません。</p>
+<p class="debug">CSV: (2,5) に要素は存在しません。</p>
+<p class="debug">CSV: (2,6) に要素は存在しません。</p>
+<p class="debug">CSV: (2,7) に要素は存在しません。</p>
+<p class="debug">CSV: (2,8) に要素は存在しません。</p>
+<p class="debug">CSV: (2,9) に要素は存在しません。</p>
+<p class="debug">CSV: (2,10) に要素は存在しません。</p>
+<p class="debug">CSV: (2,11) に要素は存在しません。</p>
+<p class="debug">CSV: (2,12) に要素は存在しません。</p>
+<p class="debug">CSV: (2,13) に要素は存在しません。</p>
+<p class="debug">CSV: (2,14) に要素は存在しません。</p>
+<p class="debug">CSV: (2,15) に要素は存在しません。</p>
+<p class="debug">CSV: (2,16) に要素は存在しません。</p>
+<p class="debug">CSV: (2,17) に要素は存在しません。</p>
+<p class="debug">CSV: (2,18) に要素は存在しません。</p>
+<p class="debug">CSV: (2,19) に要素は存在しません。</p>
+<p class="debug">CSV: (2,20) に要素は存在しません。</p>
+<p class="debug">CSV: (2,21) に要素は存在しません。</p>
+<p class="debug">CSV: (2,22) に要素は存在しません。</p>
+<p class="debug">CSV: (2,23) に要素は存在しません。</p>
+<p class="debug">CSV: (2,24) に要素は存在しません。</p>
+<p class="debug">CSV: (2,25) に要素は存在しません。</p>
+<p class="debug">CSV: (2,26) に要素は存在しません。</p>
+<p class="debug">CSV: (2,27) に要素は存在しません。</p>
+<p class="debug">CSV: (2,28) に要素は存在しません。</p>
+<p class="debug">CSV: (2,29) に要素は存在しません。</p>
+<p class="debug">CSV: (3,0) に要素は存在しません。</p>
+<p class="debug">CSV: (3,1) に要素は存在しません。</p>
+<p class="debug">CSV: (3,2) に要素は存在しません。</p>
+<p class="debug">CSV: (3,3) に要素は存在しません。</p>
+<p class="debug">CSV: (3,4) に要素は存在しません。</p>
+<p class="debug">CSV: (3,5) に要素は存在しません。</p>
+<p class="debug">CSV: (3,6) に要素は存在しません。</p>
+<p class="debug">CSV: (3,7) に要素は存在しません。</p>
+<p class="debug">CSV: (3,8) に要素は存在しません。</p>
+<p class="debug">CSV: (3,9) に要素は存在しません。</p>
+<p class="debug">CSV: (3,10) に要素は存在しません。</p>
+<p class="debug">CSV: (3,11) に要素は存在しません。</p>
+<p class="debug">CSV: (3,12) に要素は存在しません。</p>
+<p class="debug">CSV: (3,13) に要素は存在しません。</p>
+<p class="debug">CSV: (3,14) に要素は存在しません。</p>
+<p class="debug">CSV: (3,15) に要素は存在しません。</p>
+<p class="debug">CSV: (3,16) に要素は存在しません。</p>
+<p class="debug">CSV: (3,17) に要素は存在しません。</p>
+<p class="debug">CSV: (3,18) に要素は存在しません。</p>
+<p class="debug">CSV: (3,19) に要素は存在しません。</p>
+<p class="debug">CSV: (3,20) に要素は存在しません。</p>
+<p class="debug">CSV: (3,21) に要素は存在しません。</p>
+<p class="debug">CSV: (3,22) に要素は存在しません。</p>
+<p class="debug">CSV: (3,23) に要素は存在しません。</p>
+<p class="debug">CSV: (3,24) に要素は存在しません。</p>
+<p class="debug">CSV: (3,25) に要素は存在しません。</p>
+<p class="debug">CSV: (3,26) に要素は存在しません。</p>
+<p class="debug">CSV: (3,27) に要素は存在しません。</p>
+<p class="debug">CSV: (3,28) に要素は存在しません。</p>
+<p class="debug">CSV: (3,29) に要素は存在しません。</p>
+<p class="debug">CSV: (4,0) に要素は存在しません。</p>
+<p class="debug">CSV: (4,1) に要素は存在しません。</p>
+<p class="debug">CSV: (4,2) に要素は存在しません。</p>
+<p class="debug">CSV: (4,3) に要素は存在しません。</p>
+<p class="debug">CSV: (4,4) に要素は存在しません。</p>
+<p class="debug">CSV: (4,5) に要素は存在しません。</p>
+<p class="debug">CSV: (4,6) に要素は存在しません。</p>
+<p class="debug">CSV: (4,7) に要素は存在しません。</p>
+<p class="debug">CSV: (4,8) に要素は存在しません。</p>
+<p class="debug">CSV: (4,9) に要素は存在しません。</p>
+<p class="debug">CSV: (4,10) に要素は存在しません。</p>
+<p class="debug">CSV: (4,11) に要素は存在しません。</p>
+<p class="debug">CSV: (4,12) に要素は存在しません。</p>
+<p class="debug">CSV: (4,13) に要素は存在しません。</p>
+<p class="debug">CSV: (4,14) に要素は存在しません。</p>
+<p class="debug">CSV: (4,15) に要素は存在しません。</p>
+<p class="debug">CSV: (4,16) に要素は存在しません。</p>
+<p class="debug">CSV: (4,17) に要素は存在しません。</p>
+<p class="debug">CSV: (4,18) に要素は存在しません。</p>
+<p class="debug">CSV: (4,19) に要素は存在しません。</p>
+<p class="debug">CSV: (4,20) に要素は存在しません。</p>
+<p class="debug">CSV: (4,21) に要素は存在しません。</p>
+<p class="debug">CSV: (4,22) に要素は存在しません。</p>
+<p class="debug">CSV: (4,23) に要素は存在しません。</p>
+<p class="debug">CSV: (4,24) に要素は存在しません。</p>
+<p class="debug">CSV: (4,25) に要素は存在しません。</p>
+<p class="debug">CSV: (4,26) に要素は存在しません。</p>
+<p class="debug">CSV: (4,27) に要素は存在しません。</p>
+<p class="debug">CSV: (4,28) に要素は存在しません。</p>
+<p class="debug">CSV: (4,29) に要素は存在しません。</p>
 <p class="debug">Font[2] を破棄しました。</p>
 <p class="debug">スプラッシュウィンドウの表示を終了します。</p>
-<p class="debug">解像度を 560x640 に変更しました。</p>
+<p class="debug">解像度を 512x448 に変更しました。</p>
 <p class="debug">Font[3] を作成しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
 <p class="debug">Texture[2] を作成しました。</p>
@@ -285,7 +351,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/7/14 19:47:18</p>
+<p class="info">2014/7/17 15:23:25</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
