--- a/DonkeyKong/DonkeyKong/DonkeyKong_log.html
+++ b/DonkeyKong/DonkeyKong/DonkeyKong_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>DonkeyKong Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/7/17 15:23:10</p>
+<p class="info">2014/7/22 10:29:31</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -213,39 +213,13 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
-<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をオープンしました。サイズ: 588B, エンコーディング: ANSI</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をオープンしました。サイズ: 836B, エンコーディング: ANSI</p>
 <p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をクローズしました。</p>
 <p class="debug">Font[2] を作成しました。</p>
-<p class="debug">CSV: (2,0) に要素は存在しません。</p>
-<p class="debug">CSV: (2,1) に要素は存在しません。</p>
-<p class="debug">CSV: (2,2) に要素は存在しません。</p>
-<p class="debug">CSV: (2,3) に要素は存在しません。</p>
-<p class="debug">CSV: (2,4) に要素は存在しません。</p>
-<p class="debug">CSV: (2,5) に要素は存在しません。</p>
-<p class="debug">CSV: (2,6) に要素は存在しません。</p>
-<p class="debug">CSV: (2,7) に要素は存在しません。</p>
-<p class="debug">CSV: (2,8) に要素は存在しません。</p>
-<p class="debug">CSV: (2,9) に要素は存在しません。</p>
-<p class="debug">CSV: (2,10) に要素は存在しません。</p>
-<p class="debug">CSV: (2,11) に要素は存在しません。</p>
-<p class="debug">CSV: (2,12) に要素は存在しません。</p>
-<p class="debug">CSV: (2,13) に要素は存在しません。</p>
-<p class="debug">CSV: (2,14) に要素は存在しません。</p>
-<p class="debug">CSV: (2,15) に要素は存在しません。</p>
-<p class="debug">CSV: (2,16) に要素は存在しません。</p>
-<p class="debug">CSV: (2,17) に要素は存在しません。</p>
-<p class="debug">CSV: (2,18) に要素は存在しません。</p>
-<p class="debug">CSV: (2,19) に要素は存在しません。</p>
-<p class="debug">CSV: (2,20) に要素は存在しません。</p>
-<p class="debug">CSV: (2,21) に要素は存在しません。</p>
-<p class="debug">CSV: (2,22) に要素は存在しません。</p>
-<p class="debug">CSV: (2,23) に要素は存在しません。</p>
-<p class="debug">CSV: (2,24) に要素は存在しません。</p>
-<p class="debug">CSV: (2,25) に要素は存在しません。</p>
-<p class="debug">CSV: (2,26) に要素は存在しません。</p>
-<p class="debug">CSV: (2,27) に要素は存在しません。</p>
-<p class="debug">CSV: (2,28) に要素は存在しません。</p>
-<p class="debug">CSV: (2,29) に要素は存在しません。</p>
+<p class="debug">CSV: (1,0) に要素は存在しません。</p>
+<p class="debug">CSV: (1,27) に要素は存在しません。</p>
+<p class="debug">CSV: (1,28) に要素は存在しません。</p>
+<p class="debug">CSV: (1,29) に要素は存在しません。</p>
 <p class="debug">CSV: (3,0) に要素は存在しません。</p>
 <p class="debug">CSV: (3,1) に要素は存在しません。</p>
 <p class="debug">CSV: (3,2) に要素は存在しません。</p>
@@ -312,7 +286,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">Font[3] を作成しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
 <p class="debug">Texture[2] を作成しました。</p>
-<p class="info">System::Update() : ExitEvent CloseButton</p>
+<p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
@@ -351,7 +325,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/7/17 15:23:25</p>
+<p class="info">2014/7/22 10:29:41</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
