--- a/DonkeyKong/DonkeyKong/DonkeyKong_log.html
+++ b/DonkeyKong/DonkeyKong/DonkeyKong_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>DonkeyKong Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/7/22 20:19:38</p>
+<p class="info">2014/7/24 12:08:28</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -213,13 +213,16 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をオープンしました。サイズ: 2.41KiB, エンコーディング: ANSI</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\Map.csv&quot; をクローズしました。</p>
+<p class="debug">Font[2] を作成しました。</p>
+<p class="debug">Font[2] を破棄しました。</p>
 <p class="debug">スプラッシュウィンドウの表示を終了します。</p>
 <p class="debug">解像度を 512x448 に変更しました。</p>
-<p class="debug">接続デバイスが変更がされました。</p>
-<p class="debug">Font[2] を作成しました。</p>
+<p class="debug">Font[3] を作成しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
 <p class="debug">Texture[2] を作成しました。</p>
-<p class="info">System::Update() : ExitEvent EscapeKey</p>
+<p class="info">System::Update() : ExitEvent CloseButton</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
@@ -240,11 +243,11 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">レンダラーマネージャーを終了しました。</p>
 <p class="debug">Mesh[0(null)] を破棄しました。</p>
 <p class="debug">メッシュマネージャーを終了しました。</p>
-<p class="debug">Texture[2] を破棄しました。</p>
-<p class="debug">Font[2] を破棄しました。</p>
+<p class="debug">Font[3] を破棄しました。</p>
 <p class="debug">Font[0(null)] を破棄しました。</p>
 <p class="debug">フォントマネージャーを終了しました。</p>
 <p class="debug">スプライトマネージャーを終了しました。</p>
+<p class="debug">Texture[2] を破棄しました。</p>
 <p class="debug">Texture[1] を破棄しました。</p>
 <p class="debug">Texture[0(null)] を破棄しました。</p>
 <p class="debug">テクスチャマネージャーを終了しました。</p>
@@ -258,7 +261,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/7/22 20:19:57</p>
+<p class="info">2014/7/24 12:08:59</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
