--- a/DonkeyKong/DonkeyKong/DonkeyKong_log.html
+++ b/DonkeyKong/DonkeyKong/DonkeyKong_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>DonkeyKong Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/7/28 07:58:22</p>
+<p class="info">2014/7/28 12:25:39</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -217,6 +217,8 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\csv\Map.csv&quot; をクローズしました。</p>
 <p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\csv\Ladder.csv&quot; をオープンしました。サイズ: 598B, エンコーディング: ANSI</p>
 <p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\csv\Ladder.csv&quot; をクローズしました。</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\csv\Barrel.csv&quot; をオープンしました。サイズ: 67B, エンコーディング: ANSI</p>
+<p class="debug">TextReader &quot;C:\教材\Siv3D\DonkeyKong\DonkeyKong\csv\Barrel.csv&quot; をクローズしました。</p>
 <p class="debug">Font[2] を作成しました。</p>
 <p class="debug">Font[2] を破棄しました。</p>
 <p class="debug">スプラッシュウィンドウの表示を終了します。</p>
@@ -263,7 +265,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/7/28 07:58:42</p>
+<p class="info">2014/7/28 12:25:46</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
