--- a/DonkeyKong/DonkeyKong/DonkeyKong_log.html
+++ b/DonkeyKong/DonkeyKong/DonkeyKong_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>DonkeyKong Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/8/26 19:35:21</p>
+<p class="info">2014/8/28 14:34:08</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine version May 2014</p>
 <p class="info">ウィンドウクラスを登録しました。</p>
@@ -47,14 +47,14 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
 <p class="fail">Asset : 登録されていない Texture アセット &quot;Floor&quot; を取得しようとしました。</p>
-<p class="info">System::Update() : ExitEvent CloseButton</p>
+<p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
 <p class="info">ウィンドウ表示を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/8/26 19:38:00</p>
+<p class="info">2014/8/28 14:34:55</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
