--- a/Dungeon/Dungeon/Dungeon_log.html
+++ b/Dungeon/Dungeon/Dungeon_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>Dungeon Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/10/16 09:27:10</p>
+<p class="info">2014/10/16 18:43:00</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version May 2014</p>
 <p class="debug">BinaryReader &quot;C:\教材\審査会出展作品\チーム制作\Dungeon\Dungeon\engine\Siv3DVersion&quot; をオープンしました。サイズ: 4B</p>
@@ -213,6 +213,8 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
+<p class="debug">TextReader &quot;C:\教材\審査会出展作品\チーム制作\Dungeon\Dungeon\engine\data\map\map.txt&quot; をオープンしました。サイズ: 10.8KiB, エンコーディング: ANSI</p>
+<p class="debug">TextReader &quot;C:\教材\審査会出展作品\チーム制作\Dungeon\Dungeon\engine\data\map\map.txt&quot; をクローズしました。</p>
 <p class="debug">スプラッシュウィンドウの表示を終了します。</p>
 <p class="debug">解像度を 1280x720 に変更しました。</p>
 <p class="debug">Font[2] を作成しました。</p>
@@ -257,7 +259,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="debug">GDI+ を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/10/16 09:27:47</p>
+<p class="info">2014/10/16 18:43:16</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
