--- a/Dungeon/Dungeon/Dungeon_log.html
+++ b/Dungeon/Dungeon/Dungeon_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>Dungeon Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/10/20 15:37:47</p>
+<p class="info">2014/10/20 19:08:23</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine version May 2014</p>
 <p class="info">ウィンドウクラスを登録しました。</p>
@@ -46,14 +46,14 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
-<p class="info">System::Update() : ExitEvent CloseButton</p>
+<p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
 <p class="info">ウィンドウ表示を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/10/20 16:12:59</p>
+<p class="info">2014/10/20 19:08:45</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014</p>
