--- a/Dungeon/Dungeon/Dungeon_log.html
+++ b/Dungeon/Dungeon/Dungeon_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>Dungeon Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/12/16 16:32:54</p>
+<p class="info">2014/12/16 18:18:06</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine version May 2014 v2</p>
 <p class="info">ウィンドウクラスを登録しました。</p>
@@ -47,6 +47,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
 <p class="fail">Asset : 登録されていない Texture アセット &quot;Wall&quot; を取得しようとしました。</p>
+<p class="warning">Asset Register : &quot;SnakeCopter1&quot; と同じパスまたはプロパティを持つ Texture アセット &quot;SnakeCopter&quot; がすでに登録されています。</p>
 <p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました</p>
@@ -54,7 +55,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">ウィンドウ表示を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/12/16 16:33:33</p>
+<p class="info">2014/12/16 18:20:56</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014 v2</p>
