--- a/Dungeon/Dungeon/Dungeon_log.html
+++ b/Dungeon/Dungeon/Dungeon_log.html
@@ -26,7 +26,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <body>
 <h2>Dungeon Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2014/12/22 00:09:21</p>
+<p class="info">2014/12/22 10:04:02</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine version May 2014 v2</p>
 <p class="info">ウィンドウクラスを登録しました。</p>
@@ -34,7 +34,7 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">XInput コントローラーを使用できます。</p>
 <p class="info">ジョイスティックを使用できます。</p>
 <p class="info">マルチタッチをサポートしています。</p>
-<p class="info">サウンドデバイス: スピーカー / ヘッドホン (IDT High Definition Audio CODEC)</p>
+<p class="info">サウンドデバイス: SMB2330H (インテル(R) ディスプレイ用オーディオ)</p>
 <p class="info">d3d11.dll をロードしました。</p>
 <p class="info">3 個のグラフィックスアダプターを検出しました。</p>
 <p class="info">[0] NVIDIA GeForce GT 630M       (VRAM 1.95GiB System 0B Shared 2GiB)</p>
@@ -46,15 +46,14 @@ p.credit1	{ color: #FFEEDD; text-align: center; font-size: 12px; }
 <p class="info">エンジンの初期化が完了しました。</p>
 <p class="info">メインスレッドを開始しました</p>
 <hr width="76%">
-<p class="fail">Asset : 登録されていない Texture アセット &quot;Wall&quot; を取得しようとしました。</p>
-<p class="info">System::Update() : ExitEvent EscapeKey</p>
+<p class="info">System::Update() : ExitEvent CloseButton</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
 <p class="info">ウィンドウ表示を終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2014/12/22 00:11:24</p>
+<p class="info">2014/12/22 10:05:42</p>
 
 <br>
 <p class="credit0">Siv3D Engine May 2014 v2</p>
